crates/eml_cli/tests/snapshots/ui__run@basics__comments_only.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/comments_only.em
---
--- stdout ---
--- stderr ---
