crates/eml_cli/tests/snapshots/ui__run@basics__operators.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/operators.em
---
--- stdout ---
3
-6
-3
-1
True
False
True
evaluated
False
True
10
--- stderr ---
